# snowflake-cortex-agents-with-slack

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY_AUDIT.md  app.py  cortex_chat.py  cortex_response_parser.py  cortex_search_service.sql  deploy.sh  manifest.json  pyproject.toml  setup.sql  slack_bot.sh  spcs-env-template.yaml  spcs_setup.sql  spec.yaml  support_tickets_semantic_model.yaml  test-local-container.sh  test.py  web_scrape_setup.sql
snowflake_scripts/: README.md  agent_email_tool.sql  agent_slack_tool.sql  setup_agent_schedule.sql
